ingestor com virtual threads e semaforo